--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "split-type": "^0.3.4"
+    "react-icons": "^5.5.0",
+    "split-type": "^0.3.4",
+    "swiper": "^11.2.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
