--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 
     "recharts": "^2.15.1",
     "split-type": "^0.3.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
 
     "react-icons": "^5.5.0",
     "split-type": "^0.3.4",
