--- a/package.json
+++ b/package.json
@@ -18,17 +18,14 @@
     "lucide-react": "^0.476.0",
     "next": "15.1.7",
     "react": "^19.0.0",
+    "react-day-picker": "^9.5.1",
     "react-dom": "^19.0.0",
-
+    "react-icons": "^5.5.0",
     "recharts": "^2.15.1",
     "split-type": "^0.3.4",
-    "tailwindcss-animate": "^1.0.7",
-
-    "react-icons": "^5.5.0",
-    "split-type": "^0.3.4",
     "swiper": "^11.2.4",
-    "tailwind-merge": "^3.0.2"
-
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
