--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "react-dom": "^19.0.0",
 
     "recharts": "^2.15.1",
-    "split-type": "^0.3.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
 
     "react-icons": "^5.5.0",
     "split-type": "^0.3.4",
