--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/themes": "^3.2.1",
     "class-variance-authority": "^0.7.1",
@@ -19,14 +21,12 @@
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-
-    "recharts": "^2.15.1",
-    "tailwindcss-animate": "^1.0.7",
     "react-icons": "^5.5.0",
+    "recharts": "^2.15.1",
     "split-type": "^0.3.4",
     "swiper": "^11.2.4",
-    "tailwind-merge": "^3.0.2"
-
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
