--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-next-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3000",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -12,23 +13,22 @@
     "@gsap/react": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/themes": "^3.2.1",
+    "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "gsap": "^3.12.7",
     "lucide-react": "^0.476.0",
     "next": "15.1.7",
+    "next-cloudinary": "^6.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-
+    "react-icons": "^5.5.0",
     "recharts": "^2.15.1",
     "split-type": "^0.3.4",
-    "tailwindcss-animate": "^1.0.7",
-
-    "react-icons": "^5.5.0",
-    "split-type": "^0.3.4",
     "swiper": "^11.2.4",
-    "tailwind-merge": "^3.0.2"
-
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
