--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "gsap": "^3.12.7",
     "lucide-react": "^0.476.0",
     "next": "15.1.7",
