--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cuid": "^3.0.0",
     "gsap": "^3.12.7",
     "lucide-react": "^0.476.0",
     "next": "15.1.7",
