--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-phone-input-2": "^2.15.1",
     "recharts": "^2.15.1",
     "split-type": "^0.3.4",
     "swiper": "^11.2.4",
