--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/prisma-adapter": "^2.8.0",
     "@gsap/react": "^2.1.2",
     "@hookform/resolvers": "^4.1.3",
+    "@next/third-parties": "^15.2.4",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
