--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/themes": "^3.2.1",
     "@tanstack/react-query": "^5.67.1",
     "@tanstack/react-query-devtools": "^5.67.1",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.8.1",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
