--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "cuid": "^3.0.0",
     "gsap": "^3.12.7",
     "lucide-react": "^0.476.0",
-    "next": "15.1.7",
+    "next": "^15.3.0",
     "next-auth": "^5.0.0-beta.25",
     "razorpay": "^2.9.6",
     "react": "^19.0.0",
@@ -52,6 +52,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@next/bundle-analyzer": "^15.3.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -60,7 +61,8 @@
     "postcss": "^8",
     "prisma": "^6.4.1",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "webpack-bundle-analyzer": "^4.10.2"
   },
   "pnpm": {
     "ignoredBuiltDependencies": [
